# stock-analyzer

./: .coverage  .coveragerc  .dockerignore  .env.example  .env.phase1  .flake8  .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  Dockerfile.test.sh  FINAL_REPORT.md  LICENSE  MYPY_ANALYSIS.md  Makefile  README.md  coverage.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_frontend.py  run_frontend.sh  run_test.sh  stock_analyzer.py
.github/workflows/: README.md  ci.yml
alembic/: env.py
alembic/versions/: 04f6e9836884_initial_migration.py
app/: __init__.py  main.py
app/ai/: __init__.py  base.py  exceptions.py
app/analysis/: __init__.py  analyst.py  base.py  scoring.py  system.py  trader.py
app/api/: __init__.py  deps.py  paths.py
app/core/: __init__.py  bloom_filter.py  cache.py  circuit_breaker.py  config.py  database.py  distributed_lock.py  error_handler.py  exceptions.py  limiter.py  (+1 more)
config/: __init__.py  plugins.yaml  settings.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile
docs/: CHANGELOG.md  USER_GUIDE.md  algorithm_core_usage.md  用户使用手册.md
framework/: __init__.py
frontend/: README.md  __init__.py  app.py
scripts/: check_test_structure.py  full_regression_test.py  generate_hengrui_report.py  init_db.py  pre_commit_hook.py  real_analysis.py  real_simple.py
tests/: conftest.py  test_bayesian.py  test_circuit_breaker.py  test_dcf.py  test_events.py  test_safety_margin.py  test_seasons_engine.py  test_trading_guard.py  test_wuxing_engine.py  test_wuxing_states.py
(+385 files in other folders)
